--- a/EliminationMenu.xcodeproj/xcshareddata/xcschemes/EliminationMenu.xcscheme
+++ b/EliminationMenu.xcodeproj/xcshareddata/xcschemes/EliminationMenu.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "30B2D6BE1D79E74F00C54A61"
+               BuildableName = "EliminationMenuTests.xctest"
+               BlueprintName = "EliminationMenuTests"
+               ReferencedContainer = "container:EliminationMenu.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
