--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: objective-c
+
+osx_image: xcode7.3
+xcode_workspace: EliminationMenu.xcodeproj
+xcode_scheme: EliminationMenu
+xcode_sdk: iphonesimulator9.3
+
+script: xcodebuild build test -project EliminationMenu.xcodeproj -scheme EliminationMenu
