--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ xcode_workspace: EliminationMenu.xcodeproj
 xcode_scheme: EliminationMenu
 xcode_sdk: iphonesimulator9.3
 
-script: xcodebuild clean build test -project EliminationMenu.xcodeproj -scheme EliminationMenu
+script: xcodebuild clean build test -project EliminationMenu.xcodeproj -scheme EliminationMenu -destination 'platform=iOS Simulator,name=iPhone 5s'
