--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ osx_image: xcode7.3
 xcode_workspace: EliminationMenu.xcodeproj
 xcode_scheme: EliminationMenu
 xcode_sdk: iphonesimulator9.3
+install: true
 
 script: xcodebuild clean build test -project EliminationMenu.xcodeproj -scheme EliminationMenu -destination 'platform=iOS Simulator,name=iPhone 5s'
