--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: objective-c
+
+osx_image: xcode8.1
+xcode_workspace: EliminationMenu.xcodeproj
+xcode_scheme: EliminationMenu
+xcode_sdk: iphonesimulator9.3
+
+script: xcodebuild build test -project EliminationMenu.xcodeproj -scheme EliminationMenu -destination "platform=iOS Simulator,name=iPhone 6" -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
